========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-11-20

  - Made unsupported cost specifications in the SIMPLE booking algorithm issue
    an appropriate error. For example, instead of just ignoring the cost spec in
    this:

          2014-10-15 * "buy widgets"
            Assets:Inventory     10 WIDGET {} ;; Not supported.
            Assets:Cash         -80 GBP

    It will issue an error. See
    https://groups.google.com/d/msg/beancount/9NBcT-SXZMQ/sy7Z3dIdBQAJ for
    context.


2016-11-12

  - Made the Emacs prefix key configurable via a new beancount-mode-map-prefix
    variable. See discussion here:
    https://groups.google.com/d/msg/beancount/_7TscZ9phNE/K8PkcRMpBAAJ


2016-11-06

  - Fixed #139: Full booking parsing had been more liberal than the old SIMPLE
    booking algorithm can interpret. In the old code, explicitly disallow some
    interpolation cases which cannot be handled.

  - Fixed #129: Ignore custom directives for Ledger and HLedger conversion.


2016-11-05

  - Fixed #142: bean-check should return non-zero exit code upon failure.


2016-10-30

  - Merge the current version of the 'booking' branch and made the "FULL" booking
    algorithm the default one.

    * The "experiment_booking_algorithm" option has been renamed to
      "booking_algorithm". Its default value is now "FULL"; everyone will be
      using the new booking code. If for some reason you have a transitional
      need to revert to the older booking method use this option.

        option "booking_algorithm" "SIMPLE"

    * The new booking algorithm is _MUCH_ more powerful than the one old. I'll
      describe it soon in a new document, but briefly:

      - It supports many more interpolation capabilities; try omitting amounts
        or currencies which you think it ought be able to figure out
        automatically and you might find it does.
